CMRARC-371: Fixed issue with report width being cut off and bullets not being on their own line.

--- a/app/assets/stylesheets/pages/_charts.scss
+++ b/app/assets/stylesheets/pages/_charts.scss
@@ -432,5 +432,9 @@
 .report_comment, .recommendation_comment {
   white-space: pre-wrap;
 }
+.element_comment {
+  white-space: pre-wrap;
+  word-break: break-word;
+}
 
 
